--- a/src/components/sidebar-window/sidebar-window.html
+++ b/src/components/sidebar-window/sidebar-window.html
@@ -3,9 +3,8 @@
         <div class="m-base-window__wrap m--is-sidebar" :class="[{ 'm--is-open': propOpen,
                         'm--is-clickable-backdrop': propCloseOnBackdrop,
                         'm--is-disabled':disabled }, className, 'm--is-from-' + origin]" @click.self="backdropClick" ref="dialogWrap">
-            show
-            <article class="m-base-window__article" :style="{ width: propWidth, 'margin-left': marginLeft }">
-                <button type="button" @click="closeDialog" class="m-base-window__close-button" v-if="origin == 'bottom'">
+            <article class="m-base-window__article" :style="{ width: propWidth, 'margin-left': marginLeft }" ref="article">
+                <button type="button" @click="closeDialog()" class="m-base-window__close-button" v-if="origin == 'bottom'">
                     <m-i18n k="m-base-window:close"></m-i18n>
                 </button>
                 <header class="m-base-window__header" :class="{ 'm--has-title': hasTitle, 'm--no-padding': !padding || !paddingHeader }"
