Update text-field and datepicker

--- a/src/components/text-field/text-field.html
+++ b/src/components/text-field/text-field.html
@@ -10,7 +10,7 @@
     <m-input-style :state="propState" :label="label" :focus="isFocus" :empty="isEmpty">
         <input class="m-text-field__input"
                :disabled="isDisabled"
-               :placeholder="propPlaceholder"
+               :placeholder="placeholder"
                @focus="onFocus"
                @blur="onBlur"
                @keyup="onKeyup"
