--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -32,6 +32,7 @@
              :padding-header="false"
              :padding-body="false"
              :focus-management="false"
+             :close-on-backdrop="false"
              open-trigger="manual"
              width="100%"
              ref="popper"
