--- a/src/components/options-menu/options-menu.html
+++ b/src/components/options-menu/options-menu.html
@@ -3,7 +3,14 @@
         <m-i18n k="m-options-menu:open" v-if="!open"></m-i18n>
         <m-i18n k="m-options-menu:close" v-if="open"></m-i18n>
     </m-button>
-    <m-popup ref="popup1" :open.sync="open" @open="onOpen" @close="onClose" padding="" :options="options" :disabled="disabled">
+    <m-popup ref="popup1"
+             :open.sync="open"
+             @open="onOpen"
+             @close="onClose"
+             padding=""
+             :options="options"
+             :disabled="disabled"
+             :close-on-backdrop="true">
         <div class="m-options-menu" ref="menu">
             <slot>
                 <m-options-menu-item icon-name="default">Option 1</m-options-menu-item>
