--- a/src/components/dialog-window/dialog-window.html
+++ b/src/components/dialog-window/dialog-window.html
@@ -1,25 +1,28 @@
 <div class="m-base-window" ref="baseWindow">
     <portal :target-el="'#' + propId">
-        <div class="m-base-window__wrap m--is-sidebar" :class="[{ 'm--is-open': propOpen,
+        <div class="m-base-window__wrap" :class="[{ 'm--is-open': visible,
+                        'm--is-dialog': windowMode == 'dialog',
+                        'm--is-small': size == 'small',
+                        'm--is-full-size': size == 'full-size',
                         'm--is-clickable-backdrop': closeOnBackdrop,
-                        'm--is-disabled':disabled }, className, 'm--is-from-' + origin]" @click.self="backdropClick" ref="dialogWrap">
-            <article class="m-base-window__article" :style="{ width: propWidth, 'margin-left': marginLeft }" ref="article">
-                <button type="button" @click="closeDialog()" class="m-base-window__close-button" v-if="origin == 'bottom'">
-                    <m-i18n k="m-base-window:close"></m-i18n>
-                </button>
+                        'm--is-disabled':disabled }, className]" @click.self="backdropClick()" ref="dialogWrap">
+            <article class="m-base-window__article" :style="{ width: propWidth, 'margin-left': marginLeft }">
                 <header class="m-base-window__header" :class="{ 'm--has-title': hasTitle, 'm--no-padding': !padding || !paddingHeader }"
-                    v-if="hasheaderSlot">
+                    v-if="hasHeader">
                     <h2 class="m-base-window__title" v-if="hasTitle">{{ title }}</h2>
                     <slot name="header"></slot>
-                    <m-button @click="closeDialog" mode="icon" icon-name="default" class="m-base-window__header__close-button">
+                    <m-button @click="closeDialog()" mode="icon" icon-name="default" class="m-base-window__header__close-button">
                         <m-i18n k="m-base-window:close"></m-i18n>
                     </m-button>
+                </header>
+                <header class="m-base-window__header" v-else>
+                    <h2>Error: This component needs a header slot or title prop.</h2>
                 </header>
                 <div class="m-base-window__body" :class="{ 'm--no-padding': !padding || !paddingBody }" v-if="hasDefaultSlot">
                     <slot></slot>
                 </div>
                 <footer class="m-base-window__footer" :class="{ 'm--no-padding': !padding || !paddingFooter }" v-if="hasFooterSlot">
-                    <slot name="footer"></slot>
+                    <slot name="footer" v-if="windowMode != 'modal'"></slot>
                 </footer>
             </article>
         </div>
