Update after merge

--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -1,5 +1,5 @@
 @import 'abstracts/variables';
-$m-input-style--color-default-text: $m-color--grey-darker !default;
+$m-input-style--color-default-text: $m-color--disabled !default;
 $m-input-style--color-focus: $m-color--interactive !default;
 $m-input-style--color-error: $m-color--error !default;
 $m-input-style--color-valid: $m-color--success !default;
@@ -14,7 +14,6 @@ $m-input-style--padding: 4px !default;
     flex-direction: column;
     outline: none;
     cursor: pointer;
-    min-width: 130px;
 
     &::before,
     &::after {
@@ -40,7 +39,7 @@ $m-input-style--padding: 4px !default;
         background: $m-input-style--color-focus;
     }
 
-    &:hover:not(.m--is-disabled):not(.m--has-error):not(.m--is-valid),
+    &:hover:not(.m--is-disabled):not(.m--is-waiting):not(.m--has-error):not(.m--is-valid):not(.m--is-focus),
     &.m--has-value {
         &::before {
             border-color: $m-color--text;
@@ -69,21 +68,16 @@ $m-input-style--padding: 4px !default;
 
         .m-input-style {
             &__label {
-                transform: translate3d(0, -4px, 0) scale(0.8); // Magic number
+                transform: translate3d(0, -3px, 0) scale(0.8); // Magic number
                 z-index: 1;
                 width: 100%;
                 cursor: pointer;
-            }
-
-            &__disabled-icon {
-                stroke-width: 3px;
-                font-size: 8px; // Magic number
             }
         }
     }
 
     &:not(.m--is-label-up) {
-        .m-input-style__body__left {
+        &.m--has-label .m-input-style__body__left {
             opacity: 0;
         }
     }
@@ -120,23 +114,28 @@ $m-input-style--padding: 4px !default;
         }
     }
 
-    &.m--is-disabled {
+    &.m--is-disabled,
+    &.m--is-waiting {
         &::before {
             border-bottom-style: dashed;
             border-color: $m-input-style--color-disabled;
         }
 
         &::after {
+            width: 0;
             background: $m-input-style--color-disabled;
         }
 
         .m-input-style__label,
         .m-input-style__body,
         .m-button.m--is-mode-icon,
-        .m-icon.m-icon {
+        .m-icon.m-icon,
+        input {
             color: $m-input-style--color-disabled;
         }
+    }
 
+    &.m--is-disabled {
         &,
         .m-input-style__label,
         .m-input-style__body,
@@ -174,10 +173,21 @@ $m-input-style--padding: 4px !default;
         }
     }
 
+    &.m--is-anim-active {
+        .m-input-style {
+            &__label {
+                transition-property: color, transform;
+                transition-duration: $m-transition-duration--l;
+                transition-timing-function: ease;
+            }
+
+            &__body__left {
+                transition: opacity 0.3s ease;
+            }
+        }
+    }
+
     &__label {
-        transition-property: color, transform;
-        transition-duration: $m-transition-duration--l;
-        transition-timing-function: ease;
         position: relative;
         z-index: 0;
         transform-origin: 0 0;
@@ -188,15 +198,22 @@ $m-input-style--padding: 4px !default;
         font-weight: $m-font-weight;
     }
 
+    &__placeholder,
+    input::placeholder {
+        color: $m-color--grey-dark;
+    }
+
     &__body {
         position: relative;
         z-index: 1;
         display: flex;
         align-items: center;
+        flex: 1 1 auto;
+        width: 100%;
+        min-height: 30px; // Magic number
         padding: 0 0 $m-input-style--padding 0;
         font-weight: $m-font-weight;
         text-decoration: none;
-        flex: 1 1 auto;
 
         &,
         div,
@@ -207,6 +224,7 @@ $m-input-style--padding: 4px !default;
         &,
         input {
             outline: none;
+            text-overflow: ellipsis;
             font-family: $m-font-family;
             font-size: $m-font-size;
             font-weight: $m-font-weight--bold;
@@ -214,6 +232,9 @@ $m-input-style--padding: 4px !default;
             color: $m-color--text;
             border: none;
             background: none;
+        }
+
+        input {
             cursor: text;
             overflow: hidden;
             width: 100%;
@@ -229,7 +250,7 @@ $m-input-style--padding: 4px !default;
         }
 
         &__left {
-            transition: opacity 0.3s ease;
+            overflow: hidden;
             flex: 1 1 auto;
         }
 
@@ -240,13 +261,22 @@ $m-input-style--padding: 4px !default;
         &__transparent-text {
             opacity: 0;
             width: 0;
+            user-select: none;
+        }
+
+        &__adjust-width-auto {
+            height: 0;
+            opacity: 0;
+            margin-right: $m-margin--s;
+            user-select: none;
+            white-space: nowrap;
         }
 
         .m-button.m--is-mode-icon,
         .m-icon.m-icon {
             position: relative;
             z-index: 0;
-            font-size: 16px;
+            font-size: 16px; // Magic number
             color: $m-color--grey-darker;
         }
 
@@ -260,12 +290,7 @@ $m-input-style--padding: 4px !default;
         }
     }
 
-    &__disabled-icon {
-        transition: font-size $m-transition-duration--l ease, stroke-width $m-transition-duration--l ease;
-        z-index: 1;
-        display: inline-block;
-        stroke-width: 2px;
-        font-size: 12px; // Magic number
-        margin-right: $m-margin--s;
+    div {
+        outline: none;
     }
 }
