Update dropdown and datepicker

--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -46,7 +46,7 @@
             :padding-header="false"
             :padding-body="false"
             :focus-management="false"
-            :close-on-backdrop="false"
+            :close-on-backdrop="true"
             width="100%"
             ref="popper"
             @open="onOpen">
