--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -45,7 +45,7 @@ $m-input-style--padding: 4px !default;
             border-color: $m-color--text;
         }
 
-        .m-button.m--is-mode-icon,
+        .m-icon-button.m-icon-button,
         .m-icon.m-icon {
             color: $m-color--text;
         }
@@ -57,7 +57,7 @@ $m-input-style--padding: 4px !default;
         }
 
         .m-input-style__label,
-        .m-button.m--is-mode-icon,
+        .m-icon-button.m-icon-button,
         .m-icon.m-icon {
             color: $m-input-style--color-focus;
         }
@@ -92,7 +92,7 @@ $m-input-style--padding: 4px !default;
         }
 
         .m-input-style__label,
-        .m-button.m--is-mode-icon,
+        .m-icon-button.m-icon-button,
         .m-icon.m-icon {
             color: $m-input-style--color-error;
         }
@@ -108,7 +108,7 @@ $m-input-style--padding: 4px !default;
         }
 
         .m-input-style__label,
-        .m-button.m--is-mode-icon,
+        .m-icon-button.m-icon-button,
         .m-icon.m-icon {
             color: $m-input-style--color-valid;
         }
@@ -128,7 +128,7 @@ $m-input-style--padding: 4px !default;
 
         .m-input-style__label,
         .m-input-style__body,
-        .m-button.m--is-mode-icon,
+        .m-icon-button.m-icon-button,
         .m-icon.m-icon,
         input {
             color: $m-input-style--color-disabled;
@@ -144,7 +144,7 @@ $m-input-style--padding: 4px !default;
         .m-input-style__body input,
         .m-input-style__body div,
         .m-input-style__body span,
-        .m-button.m--is-mode-icon,
+        .m-icon-button.m-icon-button,
         .m-icon.m-icon {
             color: $m-input-style--color-disabled;
             cursor: not-allowed;
@@ -161,7 +161,7 @@ $m-input-style--padding: 4px !default;
         .m-input-style__body input,
         .m-input-style__body div,
         .m-input-style__body span,
-        .m-button.m--is-mode-icon,
+        .m-icon-button.m-icon-button,
         .m-icon.m-icon {
             cursor: wait;
         }
@@ -272,7 +272,7 @@ $m-input-style--padding: 4px !default;
             white-space: nowrap;
         }
 
-        .m-button.m--is-mode-icon,
+        .m-icon-button.m-icon-button,
         .m-icon.m-icon {
             position: relative;
             z-index: 0;
@@ -280,7 +280,7 @@ $m-input-style--padding: 4px !default;
             color: $m-color--grey-darker;
         }
 
-        .m-button.m--is-mode-icon {
+        .m-icon-button.m-icon-button {
             min-width: auto;
             min-height: auto;
         }
