--- a/src/components/link/link.html
+++ b/src/components/link/link.html
@@ -1,4 +1,4 @@
-<transition>
+<span>
     <router-link class="m-link"
                  :class="{ 'm--is-unvisited': isUnvisited,
                            'm--is-disabled': disabled,
@@ -29,4 +29,4 @@
         </span>
         <span class="m-link__hidden" v-if="hasHiddenText">{{ hiddenText }}</span>
     </a>
-</transition>
+</span>
