--- a/src/components/link/link.html
+++ b/src/components/link/link.html
@@ -10,7 +10,7 @@
                  v-if="isRouterLink">
         <m-icon :name="iconName" :style="{ fontSize: iconSize }" class="m-link__icon" v-if="hasIcon" aria-hidden="true"></m-icon>
         <span class="m-link__text">
-            <slot>{{ componentName }}</slot>
+            <slot></slot>
         </span>
         <span class="m-link__hidden" v-if="hasHiddenText">{{ hiddenText }}</span>
     </router-link>
@@ -25,7 +25,7 @@
        ref="link" @click="onClick">
         <m-icon class="m-link__icon" :name="propIconName" :width="iconSize" :height="iconSize" v-if="hasIcon" aria-hidden="true"></m-icon>
         <span class="m-link__text">
-            <slot>{{ componentName }}</slot>
+            <slot></slot>
         </span>
         <span class="m-link__hidden" v-if="hasHiddenText">{{ hiddenText }}</span>
     </a>
