Fix for dropdown-item, update style for label and modal

--- a/src/components/dropdown-item/dropdown-item.html
+++ b/src/components/dropdown-item/dropdown-item.html
@@ -3,5 +3,5 @@
     :disabled="disabled"
     v-if="!filtered || inactive"
     @mousedown.prevent="onMousedown($event)">
-    <slot></slot>
+    <slot><span class="m-dropdown-item__element-text">{{ propLabel }}</span></slot>
 </li>
