dropdown: fix error message not visible

--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -60,7 +60,7 @@
     </m-popup>
 
     <m-validation-message
-        :error-message="propErrorMessage"
-        :valid-message="propValidMessage"
+        :error-message="errorMessage"
+        :valid-message="validMessage"
         :helper-message="helperMessage"></m-validation-message>
 </div>
