--- a/src/components/icon-button/icon-button.html
+++ b/src/components/icon-button/icon-button.html
@@ -10,6 +10,6 @@
         @focus="onFocus"
         @blur="onBlur"
         :style="{ width: buttonSize, height: buttonSize, fontSize: iconSize }">
-    <m-icon class="m-icon-button__icon" :name="iconName"></m-icon>
+    <m-icon class="m-icon-button__icon" :name="iconName" :svg-title="title"></m-icon>
     <span class="m-icon-button__hidden" v-if="hasSlots"><slot></slot></span>
 </button>
