--- a/src/components/modal-window/modal-window.scss
+++ b/src/components/modal-window/modal-window.scss
@@ -128,6 +128,7 @@ $m-modal--max-width: 380px !default;
         &__nav {
             display: inline-flex;
             flex-direction: column;
+            align-items: center;
 
             .m-link {
                 margin-top: $m-margin;
