Quick fix, change list-item css dependency on m-button for m-icon-button

--- a/src/components/list-item/list-item.scss
+++ b/src/components/list-item/list-item.scss
@@ -30,7 +30,7 @@
     &__button {
         display: flex;
 
-        .m-button {
+        .m-icon-button {
             min-width: auto !important;
             min-height: auto !important;
         }
