--- a/src/components/tooltip/tooltip.html
+++ b/src/components/tooltip/tooltip.html
@@ -1,11 +1,12 @@
-<m-popup :open.sync="propOpen"
-            @open="onOpen"
-            @close="onClose"
-            padding=""
-            :placement="placement"
-            :disabled="disabled"
-            :close-on-backdrop="true"
-            class="m-tooltip" :class="{ 'm--is-disabled': disabled }">
+<m-popup class="m-tooltip"
+         :class="{ 'm--is-disabled': disabled }"
+         :open.sync="propOpen"
+         :padding="false"
+         :placement="placement"
+         :disabled="disabled"
+         :close-on-backdrop="true"
+         @open="onOpen"
+         @close="onClose">
     <m-icon-button slot="trigger" class="m-tooltip__icon" icon-name="information" :title="propTitle" button-size="22px" v-if="propMode == 'icon'">
         <span aria-hidden="true">{{ open ? propCloseTitle : propOpenTitle }}</span>
     </m-icon-button>
