--- a/src/components/icon-button/icon-button.html
+++ b/src/components/icon-button/icon-button.html
@@ -10,7 +10,7 @@
         @focus="onFocus"
         @blur="onBlur"
         :title="title"
-        :style="{ width: buttonSize, height: buttonSize, fontSize: size }">
-    <m-icon class="m-icon-button__icon" :name="name"></m-icon>
+        :style="{ width: buttonSize, height: buttonSize, fontSize: iconSize }">
+    <m-icon class="m-icon-button__icon" :name="iconName"></m-icon>
     <span class="m-icon-button__hidden" v-if="hasSlots"><slot></slot></span>
 </button>
