--- a/src/components/panel/panel.scss
+++ b/src/components/panel/panel.scss
@@ -5,7 +5,7 @@ $m-panel--screen--min: 640px;
 
 .m-panel {
     position: relative;
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
 
     @include m-is-ie() {
