--- a/src/components/navbar-item/navbar-item.html
+++ b/src/components/navbar-item/navbar-item.html
@@ -1,4 +1,4 @@
-<li class="m-nav-bar-item" :class="{
+<li class="m-navbar-item" :class="{
         'm--is-selected': propSelected,
         'm--is-first' : isFirst,
         'm--is-last' : isLast}" @keyup.enter="onClick" @click="onClick">
