--- a/src/components/textfield/textfield.scss
+++ b/src/components/textfield/textfield.scss
@@ -1,6 +1,6 @@
 @import 'abstracts/variables';
 
-.m-text-field {
+.m-textfield {
     position: relative;
     display: inline-flex;
     flex-direction: column;
