--- a/src/components/textfield/textfield.html
+++ b/src/components/textfield/textfield.html
@@ -1,4 +1,4 @@
-<div class="m-text-field"
+<div class="m-textfield"
      :class="[{ 'm--is-disabled' : isDisabled,
                 'm--is-waiting' : isWaiting,
                 'm--has-error' : hasError,
@@ -16,7 +16,7 @@
                    :empty="isEmpty"
                    :icon-name="iconName">
         <input ref="input"
-               class="m-text-field__input"
+               class="m-textfield__input"
                :disabled="!active"
                :placeholder="placeholder"
                :readonly="readonly"
@@ -24,7 +24,7 @@
                @blur="onBlur"
                @keyup="onKeyup"
                v-model="model">
-        <div slot="right-content" class="m-text-field__icon-password" :class="{ 'm--is-transparent': !hasValue }" v-if="propPasswordIcon">
+        <div slot="right-content" class="m-textfield__icon-password" :class="{ 'm--is-transparent': !hasValue }" v-if="propPasswordIcon">
             <m-icon-button :icon-name="iconNamePassword" button-size="22px" @click="togglePasswordVisibility">{{ iconDescriptionPassword }}</m-icon-button>
         </div>
     </m-input-style>
